# Codex

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  mood_logger.py  plot.py
tests/: test_mood_logger.py  test_plot.py  test_storage.py
